webook/webook-ymt-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-ymt-mysql
spec:
  selector:
    app: webook-ymt-mysql
  ports:
    - protocol: TCP
      port: 13316
      targetPort: 3306
  type: LoadBalancer
