webook/webook-ymt-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-ymt-redis
spec:
  selector:
    app: webook-ymt-redis
  ports:
    - protocol: TCP
      # k8s内部访问端口
      port: 6379
      # 外部访问的端口，必须是30000-32767之间
      nodePort: 31379
      # pod 暴露的端口
      targetPort: 6379
  type: NodePort
