webook/webook-ymt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-ymt
spec:
  selector:
    app: webook-ymt
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8081
  type: ClusterIP
